# sports-analysis

./: .dockerignore  .gitignore  Dockerfile  PRD_Cricket_Fitness_Tracker.md  README.md  README_MVP_PROGRESS.md  Technical_Architecture.md  User_Stories_and_Wireframes.md  alembic.ini  docker-compose.yml  env.example  main.py  mvp_completion_plan.md  pyproject.toml  test_message.py  test_websocket.py  verify_implementation.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0603cae36509_initial_schema_fitness_tracking_and_.py  2025_07_16_1044-abe7610f7ee7_add_user_and_user_identity_tables.py  2025_07_19_0854-70a4bc3c6930_add_conversation_tables.py  2025_07_19_0917-35ac3df3fb39_added_fitness_tables_and_cricket_tables.py  2025_07_22_1056-1fb70518198c_create_chat_message_and_conversations_.py  2025_07_22_1152-468a8c30ca13_add_activity_models.py  d081361737d3_create_initial_tables.py
api/routers/: analytics_router.py  core_router.py  dashboard_router.py  entries_router.py  session_router.py  websocket_router.py
app_factory/: __init__.py  factory.py
auth/: __init__.py
auth/config/: supabase.py
auth/dependencies/: __init__.py  security.py
auth/exceptions/: __init__.py  exceptions.py
auth/models/: __init__.py  user.py  user_identity.py
auth/repositories/: __init__.py  user_repository.py
auth/routers/: __init__.py  login.py  login_router.py  user_router.py
auth/schemas/: __init__.py  identity_provider.py  user.py  user_identity.py
auth/services/: __init__.py  supabase.py
common/: __init__.py  cache_settings.py
common/config/: settings.py
common/exceptions/: __init__.py  app_error.py
common/mixins/: __init__.py  base_model_mixin.py  from_pydantic_mixin.py  primary_key_mixin.py  timestamp_mixin.py
common/mixins/relationship_factories/: __init__.py  user_relationship_factory.py
common/models/: activity.py
common/patches/: __init__.py  process_response.py
common/repositories/: __init__.py  base_repository.py  crud_repository.py
common/repositories/tests/: __init__.py  test_crud_repository.py
common/schemas/: __init__.py  activity.py  app_base_model.py  app_base_settings.py  cors_settings.py  entry_type.py  list_base.py  primary_key_base.py  response_models.py  timestamp_base.py  utc_datetime.py
common/services/: __init__.py  base_supabase_service.py  cache_service.py
common/utils/: create_pydantic_model.py
core_router/router/: core_router.py
dashboard/routers/: __init__.py  dashboard_router.py
database/: __init__.py  base.py  config.py  engine.py  session.py
database/config/: engine.py
database/migrations/: add_conversation_tables.py
database/models/: __init__.py  base.py  conversation.py
database/tests/: __init__.py  fixtures.py
dependency_injection/: __init__.py  container.py  lifespan.py  registry.py
fitness_tracking/: __init__.py
fitness_tracking/exceptions/: __init__.py  fitness_errors.py
fitness_tracking/models/: __init__.py  cricket.py  cricket_coaching.py  cricket_match.py  fitness.py  rest_day.py
fitness_tracking/repositories/: __init__.py  activity_repository.py  cricket_coaching_repository.py  cricket_match_repository.py  cricket_repository.py  fitness_repository.py  rest_day_repository.py
fitness_tracking/routers/: __init__.py  activity_router.py  analytics_router.py  entries_router.py
fitness_tracking/schemas/: __init__.py  activity_with_conversation.py  combined_analytics.py  cricket.py  cricket_analytics.py  cricket_coaching.py  cricket_coaching_data_extraction.py  cricket_enums.py  cricket_match.py  cricket_match_data_extraction.py  exercise_type.py  fitness.py  fitness_data_extraction.py  rest_day.py  rest_day_data_extraction.py
fitness_tracking/schemas/enums/: __init__.py  activity_type.py  coaching_focus_type.py  cricket_discipline_type.py  cricket_session_type.py  intensity_level.py  match_format.py  rest_type.py
fitness_tracking/tests/: test_repositories.py  test_schemas.py
logger/: __init__.py  config.py  log_color.py  log_filters.py  log_formatter.py  logger.py
router/: Session_Management.py  analytics.py  audio.py  dashboard.py  entries.py  health.py  info.py  websocket.py
scripts/: create_tables_sql.py
services/: audio_handler.py  message_handler.py  voice_processing.py
static/: authentication.html  debug.html  email.html  index-old.html  index.html  manifest.json  mobile-demo.html  mobile-index.html  test.html  ux-demo.html
static/css/: mobile-first.css
static/js/: charts.js  conversation-dashboard.js  dashboard.js
voice_processing/: __init__.py
voice_processing/exceptions/: __init__.py  chat_message_errors.py  conversation_errors.py
voice_processing/models/: __init__.py  chat_message.py  conversation.py
voice_processing/repositories/: __init__.py  chat_message_repository.py  conversation_repository.py
voice_processing/routers/: __init__.py  audio_router.py  chat_message_router.py  conversation_router.py  conversation_router_legacy.py  session_router.py  websocket_router.py  websocket_routerV2.py  websocket_router_legacy.py
voice_processing/schemas/: __init__.py  analytics.py  chat_message.py  chat_message_sender.py  conversation.py  conversation_detail_enums.py  conversation_enums.py  follow_up_question.py  processing.py
voice_processing/services/: __init__.py  ai_service.py  audio_storage.py  completion_service.py  conversation_service.py  openai_service.py
voice_processing/tests/: test_repositories.py
voice_processing/websocket/: __init__.py  manager.py
